@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix bug #1729192: Writing any spellscroll requires positive grace.
+ server/skills.c
+Nicolas Weeger 2007-06-01
+
 Implement feature request #1724356: logging improvements.
 Apply modified patch from Wart.
 New settings log_timestamp and log_timestamp_format to control behaviour.
